--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                                     <i class="fa fa-quote-left text-primary"></i>
                                 </div>
                             </div>
-                            <p class="fs-5 fst-italic">Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.</p>
+                            <p class="fs-5 fst-italic">The long term mission of our company can be easily conveyed through this new logo. Thanks to the designer to your creative ideology and  duration less processing time.</p>
                             <hr class="w-25 mx-auto">
                             <h5>Umaiya</h5>
                             <span>Student</span>
