--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>Thanosan Vigneswaran - Personal Portfolio</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <meta name="keywords" content="thanosan vigneswaran,thanosan,thanosan web design services,thanosan web design and developments services,custom web design services,web design services,web design firm,web design studio,web design boutique,web design solutions,thanosan web design services,mobile website design services / mobile website design services,responsive web design services / responsive website design services,website redesign services,web design for small businesses and individuals,web design for small businesses,web design for startups,cheap website design,srilanka web design company,srilankan web design agency,srilanka web design consultancy">
+    <meta name="description" content="Welcome to my personal portfolio website. I am Thanosan Vigneswaran, a web developer and designer. Here, you can view my latest work and learn more about my skills and experience.">
 
     <!-- Favicon -->
     <link href="img/faviconW.png" rel="icon">
